# TrueHD2AC3

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-24-dts2ac3-gui-implementation.md
docs/superpowers/specs/: 2026-04-24-dts2ac3-gui-design.md
scripts/: build_portable.ps1
src/dts2ac3/: main.py  models.py  process_runner.py  settings.py  tooling.py  workflow.py
src/dts2ac3/ui/: main_window.py
src/truehd2ac3/: main.py  process_runner.py  settings.py  tooling.py  workflow.py
src/truehd2ac3/ui/: main_window.py
tests/: test_main_module.py  test_main_window.py  test_process_runner.py  test_settings.py  test_tooling.py  test_workflow.py
