[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truehd2ac3"
version = "0.1.0"
description = "PySide6 GUI for converting TrueHD tracks to AC3 and remuxing with MKVToolNix"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.12,<7",
  "pytest>=8.3,<9",
  "pytest-qt>=4.4,<5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
qt_api = "pyside6"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
